FormPage Formular UI in form_page.xml erstellt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".SubjectPage">
         </activity>
+        <activity android:name=".FormPage">
+        </activity>
     </application>
 
 </manifest>
