Widget der Applikation erstellt. Zeigt Durchschnitt von Mathematik an

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGrades">
+        <receiver
+            android:name=".MyGradesWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/my_grades_widget_info" />
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -18,10 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SubjectPage">
-        </activity>
-        <activity android:name=".FormPage">
-        </activity>
+        <activity android:name=".SubjectPage"></activity>
+        <activity android:name=".FormPage"></activity>
     </application>
 
 </manifest>
